force-app/main/default/objects/PaymentTransactions__c/PaymentTransactions__c.object-meta.xml
<CustomObject>
    <label>PaymentTransaction</label>
    <nameField>
        <label>PaymentTransactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PaymentTransaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>