force-app/main/default/objects/PaymentTransactions__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount-Custom</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>