force-app/main/default/objects/PaymentTransactions__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment</referenceTo>
    <relationshipLabel>PaymentTransaction</relationshipLabel>
    <relationshipName>PaymentTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>