force-app/main/default/objects/PaymentTransactions__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>PaymentType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Fund</fullName>
            </value>
            <value>
                <fullName>Employee Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>